<resources>
    <string name="app_name">时光影讯</string>
    <string name="app_cache">cache_mtime</string>
    <string name="ok">确认</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="are_you_sure_exit">确定要退出吗？</string>
    <string name="homepage">首页</string>
    <string name="payticket">购票</string>
    <string name="mall">商城</string>
    <string name="find">发现</string>
    <string name="user">我的</string>

    <string name="baidu_API_KEY">0D8iroostNHPyR3iZqRmGPOrNeh1pva1</string>

    <string name="loading">奋力加载中...</string>
    <string name="loading_end">更多推荐内容</string>
    <string name="edit_hint">影片/影人/影院，任你搜</string>
    <string name="edit_hint2">输入影院名字</string>
    <string name="sale">正在售票</string>
    <string name="coming_movie">即将上映</string>
    <string name="local_cinema">同城影院</string>
    <string name="cinema">影院</string>
    <string name="movie_shop">电影商城</string>
    <string name="all_goods">全部商品</string>
    <string name="time_hot_top">时光热榜</string>
    <string name="ticket_top">全球票房榜</string>
    <string name="trailer">预告片</string>
    <string name="newTrailer">新片预告</string>
    <string name="guess_movie">猜电影</string>
    <string name="wonderful_live">精彩直播</string>
    <string name="live">直播</string>
    <string name="tuji">图集</string>
    <string name="yingping">影评</string>
    <string name="jianxu">简讯</string>
    <string name="new_movie">欧美新片</string>
    <string name="mtime_handpick">时光精选</string>
    <string name="mtime_hotTopList">时光热度榜</string>
    <string name="all">全部</string>
    <string name="more">更多</string>
    <string name="bangdan">榜单</string>
    <string name="read_more">更多推荐内容</string>
    <string name="load_failed">加载失败，点我再试试？</string>
    <string name="vote">投票</string>

    <string name="coming_movie_count">即将上映（%1$d部）</string>
    <string name="user_name_comment">%1$s-评</string>
    <string name="comment_title">《%1$s》</string>
    <string name="publish_time">%1$s 评论%2$d</string>
    <string name="total_hot_movie">共%1$d部</string>
    <string name="total_coming_movie">%1$d部</string>
    <string name="total_cinema_count">%1$d家</string>
    <string name="author_editor">（%1$s %2$s）</string>
    <string name="all_comment">查看全部%1$d条评论</string>
    <string name="all_film_review">查看更多%1$d条影评</string>
    <string name="reply_count">%1$d条评论</string>
    <string name="release_date_area">%1$s年%2$s月%3$s日%4$s上映</string>
    <string name="release_date">%1$s月%2$s日上映</string>
    <string name="show_date">%1$d月%2$d日</string>
    <string name="goods_price">￥%1$s</string>
    <string name="rating">评%1$s分</string>
    <string name="review_movie">评《%1$s》</string>
    <string name="portray">饰：%1$s</string>
    <string name="totalNominateAward">共获提名%1$d次</string>
    <string name="totalWinAward">共获奖%1$d次</string>
    <string name="award_list">共获奖%1$d次，提名%2$d次</string>
    <string name="company_count">%1$d家公司参与制作</string>
    <string name="user_comment">用户留言(%1$d)</string>
    <string name="like_percent">喜爱度%1$s</string>
    <string name="media_review_count">%1$d家媒体相关报道</string>
    <string name="movie_relation">电影周边(%1$d)</string>
    <string name="mini_comment">短评(%1$d)</string>
    <string name="wantseen_count">%1$d人想看</string>
    <!--<string name="movie_duration"><font color="#629D0A"><b>有彩蛋-</b></font></string>-->
    <string name="movie_duration"><Data><![CDATA[<font color="#629D0A">有彩蛋</font> - ]]></Data></string>
    <string name="total_boxOffice">累计票房：%1$s</string>
    <string name="showdate_cinema_showtime_count">%1$s%2$d家影院上映%3$d场</string>
    <string name="director2">导演：%1$s</string>
    <string name="actor2">演员：%1$s，%2$s</string>
    <string name="main_actor">主演：%1$s</string>
    <string name="releaseDate">上映日期：%1$s %2$s</string>
    <string name="releaseDate_area">上映：%1$s %2$s</string>
    <string name="wantseen_count2"><Data><![CDATA[<font color="#FF8700">%1$d</font>人想看-%2$s]]></Data></string>
    <string name="day">%1$d日</string>
    <string name="min_price">￥%1$d起</string>
    <string name="movie_total">共%1$d部电影</string>
    <!--<string name="min_price"><Data><![CDATA[￥<font size="50">%1$d</font>起]]></Data></string>-->

    <string name="author">作者</string>
    <string name="editor">编辑</string>

    <string name="advance_sale">预售</string>
    <string name="advance_sale2">超前预售</string>
    <string name="remind_release">上映提醒</string>
    <string name="no_tickets">不可购票</string>
    <string name="buy_ticket">购票</string>
    <string name="search_movie_info">查影讯</string>
    <string name="comment_edittext_hint">留下我想说的...</string>
    <string name="write_comment">写评论...</string>
    <string name="send">发送</string>
    <string name="Sharing_to_friend">分享文章给朋友</string>
    <string name="Share">分享</string>
    <string name="wexin_friend">微信朋友</string>
    <string name="wexin_circle">朋友圈</string>
    <string name="xlweibo">新浪微博</string>
    <string name="qqfriend">QQ好友</string>

    <string name="relations_info">相关资料</string>
    <string name="wonderful_comment">精彩评论</string>
    <string name="relations_goods">相关商品</string>
    <string name="relations_reads">相关阅读</string>
    <string name="reply">回复</string>
    <string name="select_city">选择城市</string>
    <string name="input_cityname">输入城市名</string>


    <string name="favorite">收藏</string>
    <string name="wantseen">想看</string>
    <string name="write_reviews">写影评</string>
    <string name="select_sale">选座购票</string>
    <string name="story">剧情：</string>
    <string name="actor">主要演员</string>
    <string name="director">导演</string>
    <string name="video">视频</string>
    <string name="image">图片</string>

    <string name="hot_comment">短评</string>
    <string name="hot_long_comment">精选影评</string>
    <string name="box_office_rankings">票房排名</string>
    <string name="box_office_today">今日实时(万)</string>
    <string name="box_office_total">累计票房(亿)</string>

    <string name="movie_reading">电影解读</string>
    <string name="event_total">该片你该了解的0件事</string>
    <string name="media_review">媒体评论</string>
    <string name="production_issue">制作发行</string>
    <string name="behind">幕后制作</string>
    <string name="more_info">更多资料</string>

    <string name="media_reports">媒体相关报道</string>
    <string name="other_more_info">其它更多内容</string>
    <string name="base_info">基本资料</string>
    <string name="pro_reading">专业解读</string>
    <string name="comment">评</string>
    <string name="trailer_behind"><![CDATA[预告片&拍摄幕后]]></string>
    <string name="video_name">视频名称</string>
    <string name="like">喜欢</string>
    <string name="unlike">不喜欢</string>
    <string name="hot_play">正在热映</string>
    <string name="main_movie">主要作品</string>
    <string name="actor_images">影人图集</string>
    <string name="actor_expriences">演艺经历</string>
    <string name="credits">演职员</string>
    <string name="movie">电影</string>
    <string name="search">搜索</string>
    <string name="huge_screen">中国巨幕</string>
    <string name="most_attention">最受关注</string>

    <string name="discount">特惠</string>
    <string name="nearby">附近</string>
    <string name="filter">筛选</string>
    <string name="current_city">当前城市</string>
    <string name="no_found">没有找到数据</string>
    <string name="mall_home_edit_hint">搜索正版电影周边</string>
    <string name="more_product">更多商品</string>
    <string name="maybe_like_goods">你可能感兴趣的</string>
    <string name="news">新闻</string>
    <string name="top_list">排行榜</string>
    <string name="review">影评</string>
    <string name="news_history">往期</string>
    <string name="mainland_boxoffice">内地票房榜</string>
    <string name="time_toplist100">时光Top100</string>
    <string name="chinese_toplist100">华语Top100</string>
    <string name="globle_toplist100">全球票房榜</string>
    <string name="global_boxofice">全球票房榜</string>
    <string name="mainland">内地</string>
    <string name="NorthAmerica">北美</string>
    <string name="global">全球</string>
    <string name="movie_filter">影片分类筛选</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="click_clear_history">点击清除历史记录</string>
    <string name="Sort_by_hot">按热度排序</string>
    <string name="Sort_by_rating">按评分排序</string>
    <string name="Sort_by_time">按时间排序</string>
    <string name="no_hotcomment">暂无短评</string>
    <string name="no_hotlongcomments">暂无影评</string>
    <string name="no_data">暂无数据</string>
    <string name="price">价格</string>
    <string name="location_failed">定位失败</string>
    <string name="net_reconnect">网络连接不可用,是否进行设置?</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="film_review">影评</string>
    <string name="seen">看过</string>
    <string name="coupon">优惠券</string>
    <string name="redpackets_password">红包口令</string>
    <string name="giftcard">礼品卡</string>
    <string name="balance">余额</string>
    <string name="tickets_form">电影票订单</string>
    <string name="goods_form">商品订单</string>
    <string name="shopping_cart">购物车</string>
    <string name="my_activity">我的活动</string>
    <string name="base_setting">基本设置</string>
    <string name="feedback">客服/反馈</string>
    <string name="about_me">关于我们</string>

</resources>
